--- a/views/index.jade
+++ b/views/index.jade
@@ -51,8 +51,8 @@ block content
         // /ADD USER
 
         // Edit USER
-        h2 Add User
-        #addUser
+        //h2 Edit User
+        //-#editUser
             fieldset
                 input#inputUserName(type='text', placeholder='Username')
                 input#inputUserEmail(type='text', placeholder='Email')
